--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
+    "@tanstack/react-query": "^5.0.5",
     "clsx": "^1.2.1",
     "lodash.shuffle": "^4.2.0",
     "prop-types": "^15.8.1",
@@ -41,16 +42,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.2",
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
+    "@types/jest": "^29.5.6",
+    "@types/node": "^18.18.6",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.2.2",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.5"
   },
   "prettier": {
     "printWidth": 80,
